Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98795

/Users/qt/work/qt/qtapplicationmanager/src/launcher-lib/AppManLauncherPrivate_autogen/include/../../launchermain.h:102:33: error: private field 'm_waylandExtension' is not used [-Werror,-Wunused-private-field]

    XMLWordPrintable

Details

    • 9b0f48bcdd5e3dc9d07973ef2a44818ba35c4224 (qt/qtapplicationmanager/6.2.2) b3c9cfa0fe (qt/qtapplicationmanager/6.2.3) b3c9cfa0fe (qt/qtapplicationmanager/6.2.4) d684c669a5 (qt/qtapplicationmanager/6.3.0)

    Description

      agent:2021/11/29 05:51:01 build.go:394: In file included from /Users/qt/work/qt/qtapplicationmanager/src/launcher-lib/launchermain.cpp:46:
      agent:2021/11/29 05:51:01 build.go:394: /Users/qt/work/qt/qtapplicationmanager/src/launcher-lib/AppManLauncherPrivate_autogen/include/../../launchermain.h:102:33: error: private field 'm_waylandExtension' is not used [-Werror,-Wunused-private-field]
      agent:2021/11/29 05:51:01 build.go:394:     WaylandQtAMClientExtension *m_waylandExtension = nullptr;
      agent:2021/11/29 05:51:01 build.go:394:                                 ^
      agent:2021/11/29 05:51:01 build.go:394: 1 error generated.
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/73fc1ec8f9a4eda6fb8cae50a4f73ba6d5bbf7d9/MacOSMacOS_12x86_64MacOSMacOS_12x86_64Clangqtci-macos-12-x86_64-102-fb4d64Sccache_WarningsAreErrors/8950573201582473d0966f25187ece853cafc60c/build_1638165819/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1638165667

      Tested changes (refs/builds/qtci/dev/1638164467):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/380926/4 Update dependencies on 'dev' in qt/qtapplicationmanager
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/381965/1 Fix unused member warning on non-Linux platforms

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rgriebl Robert Griebl
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes