Fix another unused member warning on non-Wayland builds

Change-Id: I18d1e929452f3f877be9d417e2da662a1115781a
Fixes: QTBUG-98795
Reviewed-by: Dominik Holland <dominik.holland@qt.io>
(cherry picked from commit d684c669a5001c8a9551b523aebbefa8bf99ff7c)
Reviewed-by: Robert Griebl <robert.griebl@qt.io>